repos/emily-python/contents/test/export/fail/includeMe.em
# NOT A TEST-- IS LOADED BY: PRIVATE.EM

export a = 3
let b = 4
